# linguascreen-api

./: .env.example  .gitignore  README.md  __init__.py  app.db  config.py  db.py  exception.py  main.py  pyproject.toml
core/: client.py  llm.py  ocr.py  translation.py
models/: sentences.py  user.py  words.py
routers/: auth.py  gateway.py  sentences.py  user.py  words.py
security/: auth.py  jwt.py
